# rust_lessons

./: .gitignore  CURRICULUM.md
NetworkProject/mac_sec_packet_generator/: Cargo.toml  macsec_traffic.pcap
NetworkProject/macsec_packet_analyzer/: ARCHITECTURE.md  CONFIG_QUICK_REFERENCE.md  Cargo.toml  IMPLEMENTATION_DETAILS.md  LIVE_CAPTURE_HOWTO.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REST_API_CONFIG.md  STRESS_TEST_SUMMARY.md  TESTING.md  TESTING_GUIDE.md  build.rs  config.json.example  test_analyzer.sh
NetworkProject/macsec_packet_analyzer/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  persist.rs  types.rs
NetworkProject/macsec_packet_analyzer/src/analysis/: flow.rs  mod.rs
NetworkProject/macsec_packet_analyzer/src/capture/: af_packet.rs  file.rs  mod.rs  napatech.rs  pcap_live.rs  replay.rs  source.rs  xdp.rs
NetworkProject/macsec_packet_analyzer/src/protocol/: generic_l3.rs  ipsec.rs  macsec.rs  mod.rs  parser.rs  registry.rs
NetworkProject/macsec_packet_analyzer/stress_testing/: .gitignore  INVESTIGATION_FINDINGS.md  MIXED_PROTOCOL_TESTING.md  PROPER_STRESS_TEST_SUMMARY.md  README.md  STRESS_TEST_METHODOLOGY.md  STRESS_TEST_QUICKSTART.md  THROUGHPUT_RESULTS.md  pcap_generator.py  stress_test.sh
NetworkProject/network_project/: Cargo.toml  build.rs
phase_0_hello_world/: README.md  lesson_plan.md  lessons.md
phase_0_hello_world/solution/: Cargo.toml
phase_1_fundamentals/: LESSONS_STRUCTURE.md  lesson_plan.md  lessons.md
phase_1_fundamentals/lessons/: README.md  lesson_01_primitive_types.md  lesson_02_creating_functions.md
(+14 files in other folders)
