[package]
name = "macsec_packet_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
etherparse = "0.15"
pcap = { version = "0.8", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
dashmap = { version = "5.5", optional = true }
crossbeam = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rusqlite = { version = "0.30", features = ["bundled", "chrono"], optional = true }
chrono = { version = "0.4", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true }

[[bin]]
name = "macsec_packet_analyzer"
required-features = ["cli"]

[[bin]]
name = "async_live_analyzer"

[features]
default = ["rest-api"]
cli = ["pcap"]
async = ["tokio", "dashmap", "crossbeam", "libc"]
rest-api = ["async", "pcap", "serde", "serde_json", "rusqlite", "chrono", "axum", "tower", "tower-http"]
napatech = ["async"]

# Napatech NTAPI linking configuration
# When building with napatech feature, ensure Napatech NTAPI library is installed:
#   Linux: /opt/napatech3/lib/libntapi.so (or similar)
#   Set LD_LIBRARY_PATH if needed: export LD_LIBRARY_PATH=/opt/napatech/lib:$LD_LIBRARY_PATH
